--- a/src/templates/main/navbar.html
+++ b/src/templates/main/navbar.html
@@ -5,29 +5,31 @@
 {% url 'profiles:invite-profiles-view' as path_to_invites %}
 {% url 'profiles:all-profiles-view' as path_to_all_profiles %}
 
+
 <div class="navbar navbar-expand-lg navbar-dark bg-dark py-0 px-3">
-    <a href="{{path_to_home}}" class="{% if request.path == path_to_home %}active{% endif %} navbar-brand">
+
+    <a href="{{path_to_home}}" class="{% if request.path == path_to_home %}active{% endif %} navbar-brand me-4">
         <h3><img src="/static/s_logo.jpeg" class="img rounded-circle mb-2" style="width:40px;vertical-align:bottom;"/>&nbsp;Socialbook</h3>
     </a>
+
+    {% if request.user.is_authenticated %}
     <!-- toggle button for mobile nav -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     
-    <!-- navbar links -->
+    <!-- navbar collapse -->
     <div class="collapse navbar-collapse justify-content-end align-center " id="main-nav">
 
-    <ul class="navbar-nav mr-auto pt-7">
-        {% if request.user.is_authenticated %}
-        <li class="nav-item  px-3">
+        <!-- Left Side Item -->
+        <ul class="navbar-nav mr-auto  pt-7">
+        <li class="nav-item  px-2">
             <a href="{{path_to_posts}}" class="nav-link {% if request.path == path_to_posts %}active{% endif %}">
             Board
             </a>
         </li>
-        {% endif %}
 
-        {% if request.user.is_authenticated %}
-        <li class="nav-item px-3">
+        <li class="nav-item px-2">
             <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle px-4" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Friends
@@ -37,15 +39,16 @@
                         All Profiles
                     </a></li>
                     <li><a href="{{path_to_invites}}" class="{% if request.path == path_to_invites %}active{% endif %} dropdown-item">
-                        Send Invites
+                        <span class="d-flex inline">Invites Send&nbsp;<div class="bg-danger text-white rounded ms-5 px-3">{{send_num}}</div><span>
                     </a></li>
                     <li><a href="{{path_to_my_invites}}" class="{% if request.path == path_to_my_invites %}active{% endif %} dropdown-item">
-                        <span class="d-flex inline">Received Invites<div class="bg-danger text-white rounded mx-2 px-3">{{invites_num}}</div><span>
+                        <span class="d-flex inline">Invites Received<div class="bg-danger text-white rounded ms-4 px-3">{{invites_num}}</div><span>
                     </a></li>
                 </ul>
             </div>
         </li>
-        <li class="nav-item px-3">
+
+        <li class="nav-item px-2">
             <form action="" method="GET">
                 <div class="input-group">
 
@@ -60,26 +63,30 @@
                 </div>
             </form>         
         </li>
-        <li class="nav-item px-3" >
+        </ul>
+        <!-- Right Side Item -->
+        <ul class="navbar-nav ms-auto pt-7">
+        <li class="nav-item px-2" >
             <a href="{{path_to_my_profile}}" class="{% if request.path == path_to_my_profile %}active{% endif %} nav-link">
-                <div class="flow-inline">
                 <img src="{{picture.url}}" class="img bg-info rounded-circle" style="width:30px"/>
                 {{ request.user }}
-                </div> 
             </a>
         </li>
-        <li class="nav-item px-3" >
+        <li class="nav-item px-2" >
             <a href="/accounts/logout/" class="nav-link">
                 Logout
             </a>
         </li>
-        {% else %}
-        <li class="nav-item px-3">
-        <a href="/accounts/login/" class="nav-link">
-                Login
-            </a>
-        </li>
-        {% endif %}
     </ul>
     </div>
+    {% else %}
+        <ul class="navbar-nav ms-auto pt-7">
+            <li class="nav-item px-2">
+            <a href="/accounts/login/" class="nav-link me-aut">
+                    Login
+            </a>
+            </li>
+        </ul>
+     {% endif %}
+ 
 </div>
