--- a/src/profiles/templates/profiles/detail.html
+++ b/src/profiles/templates/profiles/detail.html
@@ -5,11 +5,10 @@ Profile Detail
 {% endblock%}
 
 {%block content%}
-<div class = "card m-2 p-2 bg-light">
+<div class = "card m-2 p-2 bg-light col-md-9">
     <div class = "row p-2">
         <div class="col-md-4 col-lg-3">
             <img class="img bg-info rounded" style="width:200px" src="{{object.avatar.url}}"/>
-            <h1>{{object.user}}</h1>
             <div class="list-group" style="width:200px">
                 <li class="list-group-item">
                     Posts<div class="badge bg-secondary float-end">{{object.get_posts_no}}</div>
@@ -51,17 +50,22 @@ Profile Detail
             </div>
         </div>
         <div class="col-md-8 col-lg-9 my-2">
-            <div >
+            <div class="bg-success text-white rounded px-3 py-1"><h3>{{object.display_name}}</h3></div> 
+            
+            <div class="mt-4">
             <h4><i class="bi bi-chat-left-dots"></i>&nbsp;&nbsp;Post List</h4>
             {% if len_posts %}
                 {% for post in posts %}
                     <div class = "card my-2 p-2">
+                    {% if post.image %}
+                    <img class="img" src="{{post.image.url}}">
+                    {% endif %}
                     {{ post.content }}
                     </div>
                 {% endfor %}
             {% endif %}
             </div>
-        </div> 
+        </div>
     </div>
 </div>
 
