--- a/src/templates/main/home.html
+++ b/src/templates/main/home.html
@@ -2,21 +2,31 @@
 {% load static %}
 
 {% block title %}
-home
+Home
 {% endblock title %}
 
 {% block content %}
-{{hello}}
-<p>{{user}}</p>
+<div class="row">
+<div class = "card col-md-4 p-2 m-2 mt-4">
+    <h2 class="text-primary">Welcome to Social Book</h2>
+    <p>A place to share your hapiness, sadness and idea with your friends</p>
+</div>
+<div class = "card col-md-4 p-2 m-2 mt-4">
+    <P>Testing accounts for your trial:</P>
+    <table class="table" style="max-width:300;">
+    <thead><tr><th>User</th><th>Password</th></tr></thead>
+    <tbody>
+        <tr><td>aaa</td><td>aaa</td></tr>
+        <tr><td>bbb</td><td>bbb</td></tr>
+        <tr><td>ccc</td><td>ccc</td></tr>
+        <tr><td>ddd</td><td>ddd</td></tr>
+        <tr><td>eee</td><td>eee</td></tr>
+        <tr><td>fff</td><td>fff</td></tr>
+    </tbody>
+    </table>
+</div>
+</div>
 
 {% endblock content %}
 
-{% block scripts %}
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        console.log("working from home.html")
-    }, false);
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-</script>
-{% endblock scripts %}
+
