--- a/src/posts/templates/posts/main.html
+++ b/src/posts/templates/posts/main.html
@@ -26,7 +26,7 @@
                     {% endif %}
                 </div>
                 <img class="img bg-info rounded-circle" style="width:30px" src={{obj.author.avatar.url}}> 
-                &nbsp;&nbsp;{{ obj.author.display_name }} - {{ obj.updated|timesince}} ago
+                &nbsp;&nbsp;{{ obj.author.display_name }} - {{ obj.created|timesince}} ago
             </div>
             <div class="card mx-2 p-2" style="background:white;">
                 {% if obj.image %}
