--- a/src/posts/templates/posts/main.html
+++ b/src/posts/templates/posts/main.html
@@ -5,9 +5,9 @@
 -->
 {% load crispy_forms_tags %}
 
-{% block header%}
-
-{% endblock header %}
+{% block title%}
+post board
+{% endblock title %}
 
 {% block content%}
 <div class="row">
